Fixed flexbox grow and fixed an overflow issue with sizing smaller than mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,7 @@ header {
     background-color: darkblue;
     color: #fff;
     max-height: 180px;
+    flex-wrap: wrap;
   }
 
 h1{ 
@@ -20,12 +21,18 @@ h1{
 
 aside h2{
     display: flex;
-   font-size: 300%;
-   text-decoration: wavy;
+    font-size: 300%;
+    text-decoration: wavy;
 }
 
-section h2{
-    align-items: flex-end;
+div h2{
+    display: inline-block;
+    position: absolute;
+    padding-bottom: 15px;
+    padding-left: 10px;
+    color: #fff;
+    background-color: #000;
+
 }
 
 .banner{
@@ -96,7 +103,7 @@ aside{
     align-items: left;
     justify-content: space-between;
     margin: 40px;
-    max-width: auto;
+    min-width: auto;
     
 }
 
@@ -104,27 +111,31 @@ p{
     padding: 40px;
 }
 
-article{
-    max-width: 100%;
+article {
     display: flex;
     border-left-color: black;
     border-width: 4px;
     border-left: solid;
     align-items: center;
     padding-top: 20px;
+    justify-items: center;
+
+}
+
+.flexrow article {
+    flex-direction: row;
+    display: flex;
+    justify-content: space-evenly;
+    min-width: 300px;
     flex-wrap: wrap;
     
 }
 
-article #canDO{
-    flex-direction: row;
-    flex-grow: 0;
-}
+
 
 .project {
     padding: 20px;
     display: flex;
-   
     align-items: flex-end;
 
 }
@@ -152,49 +163,44 @@ footer{
 
 }
 
-img .project{
-    display: flex;
-    box-shadow: 0, 10px, 10px, rgba(180, 79, 79, 0.5);
-    content: '';
-    position: absolute;
-    top: 0;
-    left:0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to top, #000, transparent);
-    z-index: 2;
-    transition: 0.5s
+
+a img{
+    height: 95%;
+    width: 95%;
 }
 
-.flex{
+.flexcol{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.flexrow{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.flexrow a{
+    min-width: 200px;
 }
 
 article ul {
     display: flex;
     justify-content: space-evenly;
     min-width: 300px;
+    flex-wrap: wrap;
+
+}
+div{
+    display: flex;
 }
 
-@media screen and (min-width: 600px) {
 
-        main {
-            width: 50%;
-        }
-    }
-    
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 563px) {
 
-        main {
-            width: 738px;
-        }
-    }
-    
-@media screen and (min-width: 992px) {
-        main {
-            width: 100%;
+        aside {
+            display: none;
         }
     }
